# eflux-data

./: .gitignore  README.md  main.py  pyproject.toml
src/: scrape.py
